19/10/2020
==========
New: GETNUMBER control for use in tablets. See get-num.prg
Bug: Font solved when focus

07/10/2020
==========
Example: Use HTML command. html.prg

05/10/2020
==========
Enchanced: TWebFolder() propertie :lBorder. See folder3.prg
Enchanced: TWebFolder() Tab clause class. See folder3.prg

30/09/2020
==========
Enchanced: TWebGet() clause LINK. See get-link.prg

29/09/2020
==========
New: JS TWebBrwSearch(). See brwsearch.prg
Updated: TWebFolder() Option working

28/09/2020
==========
Enchanced: TWebGet multi-button. See get-btn.prg

27/09/2020
==========
Enchanced: TWebGet align


25/09/2020
==========
New: TWebImage. See image.prg
New: JS TWebBrwSelect(). Select from table a row. brwselect.prg

13/09/2020
==========
New: Container BOX: See box.prg, box2.prg, box3.prg
Updated: New clause CLASS to ROW/ROWGROUP 