@@ -288,15 +288,13 @@ function loadCSS(href) {
     //  COMO ADD ROW ? -> https://stackoverflow.com/questions/28503985/bootstraptable-dynamically-add-and-delete-row
 */
 
-function TWebBrowse( cId ) {
+function TWebBrowse( cId, aData ) {
 
 	this.cId    	= cId
 	this.bClick 	= null
 	this.bDblClick 	= null
 
     var oBrowse 
-	
-	console.log( this )
 	
 	this.SetData = function( rows ) {	
 	   //$table.bootstrapTable( 'load', rows ) 
@@ -322,7 +320,7 @@ function TWebBrowse( cId ) {
 	}
 
 	
-	this.Init = function() {	    
+	this.Init = function( aData ) {	    
 	    
 	    oBrowse = $('#' + this.cId )
 	    
@@ -333,9 +331,15 @@ function TWebBrowse( cId ) {
 	    if ( typeof this.bDblClick == 'function' ){
 	        oBrowse.on('dbl-click-row.bs.table', this.bDblClick )
 	    }
-	    
-	    oBrowse.bootstrapTable( {data: [] } )    	    
+		
+		if ( $.type(aData) == 'array' )	    
+			oBrowse.bootstrapTable( {data: aData } ) 
+		else
+			oBrowse.bootstrapTable()    	    
 	}	
+	
+	this.Init( aData )
+	
 }
 
 //	-------------------------------------------------------------------------------------//
